fixed pom files

--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -5,14 +5,14 @@
     <artifactId>persistence</artifactId>
 
     <parent>
-        <groupId>com.tinqinacademy</groupId>
+        <groupId>com.tinqinacademy.comments</groupId>
         <artifactId>comments</artifactId>
         <version>${revision}</version>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>com.tinqinacademy</groupId>
+            <groupId>com.tinqinacademy.comments</groupId>
             <artifactId>domain</artifactId>
             <version>${revision}</version>
         </dependency>
