--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,14 +5,14 @@
     <artifactId>core</artifactId>
 
     <parent>
-        <groupId>com.tinqinacademy</groupId>
+        <groupId>com.tinqinacademy.comments</groupId>
         <artifactId>comments</artifactId>
         <version>${revision}</version>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>com.tinqinacademy</groupId>
+            <groupId>com.tinqinacademy.comments</groupId>
             <artifactId>api</artifactId>
             <version>${revision}</version>
         </dependency>
