--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=comment
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
+spring.datasource.url=jdbc:postgresql://localhost:5432/comments
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=tyrxuya
 spring.datasource.password=1234
