Added spring boot admin starter client dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<swagger.version>2.6.0</swagger.version>
 		<flatten.version>1.6.0</flatten.version>
 		<vavr.version>0.10.4</vavr.version>
+		<sbadmin.version>3.3.3</sbadmin.version>
 	</properties>
 
 	<dependencies>
