--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>${sbadmin.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
