Connected to admin client

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=comment
+server.address=localhost
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/comments
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -6,3 +7,8 @@ spring.datasource.username=tyrxuya
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+server.port=8082
+spring.boot.admin.client.url=http://localhost:8085/api/v1/admin
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
