--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<java.version>21</java.version>
 		<revision>0.0.1-SNAPSHOT</revision>
 		<model.version>4.0.0</model.version>
-		<group.id>com.tinqinacademy</group.id>
+		<group.id>com.tinqinacademy.comments</group.id>
 		<jackson.version>2.17.1</jackson.version>
 		<swagger.version>2.6.0</swagger.version>
 		<flatten.version>1.6.0</flatten.version>
@@ -51,11 +51,6 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${swagger.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.github.openfeign</groupId>
-			<artifactId>feign-jackson</artifactId>
-			<version>${feign-jackson.version}</version>
 		</dependency>
 	</dependencies>
 
