--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,6 +16,16 @@
             <artifactId>api</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>com.tinqinacademy.comments</groupId>
+            <artifactId>persistence</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tinqinacademy.comments</groupId>
+            <artifactId>domain</artifactId>
+            <version>${revision}</version>
+        </dependency>
     </dependencies>
 
 </project>
