Change pom.xml to build a jar file with name comments.jar

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -33,12 +33,13 @@
     </dependencies>
 
     <build>
-        <pluginManagement>
+        <finalName>comments</finalName>
             <plugins>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <configuration>
+                        <mainClass>com.tinqinacademy.comments.rest.CommentsApplication</mainClass>
                         <excludes>
                             <exclude>
                                 <groupId>org.projectlombok</groupId>
@@ -46,9 +47,15 @@
                             </exclude>
                         </excludes>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
-        </pluginManagement>
     </build>
 
 </project>
