Change application.properties to work with docker

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=comment
 server.address=localhost
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/comments
+spring.datasource.url=jdbc:postgresql://localhost:5432/comments?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=tyrxuya
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
 
 server.port=8082
 spring.boot.admin.client.url=http://localhost:8085/api/v1/admin
